--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap-sass": "3.3.7",
-    "http-server": "^0.11.1",
+    "http-server": "^0.12.1",
     "react": "16.3.2",
     "react-custom-scrollbars": "4.2.1",
-    "react-dom": "16.3.2",
+    "react-dom": "^16.13.0",
     "react-redux": "5.0.7",
     "redux": "4.0.0",
     "redux-saga": "0.16.0",
     "reselect": "3.0.1",
-    "web3": "1.0.0-beta.34"
+    "web3": "^1.2.6"
   },
   "devDependencies": {
     "babel-core": "6.26.3",
@@ -33,17 +33,17 @@
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-1": "6.24.1",
-    "css-loader": "0.28.11",
+    "css-loader": "^3.4.2",
     "eslint": "4.19.1",
     "eslint-plugin-react": "7.8.2",
     "file-loader": "1.1.11",
     "html-webpack-plugin": "3.2.0",
-    "node-sass": "4.9.0",
+    "node-sass": "^4.13.1",
     "prop-types": "15.6.1",
     "sass-loader": "7.0.1",
     "style-loader": "0.21.0",
-    "webpack": "4.7.0",
-    "webpack-cli": "2.1.3",
-    "webpack-dev-server": "3.1.4"
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
